hphp/hack/test/typecheck/trait_require_error_noextend.php.exp
File "trait_require_error_noextend.php", line 23, characters 7-12:
Failure to satisfy requirement: Super (Typing[4111])
File "trait_require_error_noextend.php", line 15, characters 19-23:
Required here
